k8s/delivery-control/postgres/postgres-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-clusterip
spec:
  selector:
    app: postgres-deployment
  ports:
  - port: 5432
    targetPort: 5432
