k8s/delivery-control/postgres/postgres-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres-policy
spec:
  podSelector:
    matchLabels: 
      app: postgres-deployment
  policyTypes:
    - Egress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: delivery-control-deployment
      ports:
      - port: 5432
      - protocol: TCP
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: delivery-control-deployment
      ports:
      - port: 5432
      - protocol: TCP
